Add java_home